[#noissue] Fix perm OOM of GRPC test