@@ -20,6 +20,7 @@ import com.navercorp.pinpoint.pluginit.utils.AgentPath;
 import com.navercorp.pinpoint.pluginit.utils.PluginITConstants;
 import com.navercorp.pinpoint.test.plugin.Dependency;
 import com.navercorp.pinpoint.test.plugin.ImportPlugin;
+import com.navercorp.pinpoint.test.plugin.JvmArgument;
 import com.navercorp.pinpoint.test.plugin.PinpointAgent;
 import com.navercorp.pinpoint.test.plugin.PinpointConfig;
 import com.navercorp.pinpoint.test.plugin.PinpointPluginTestSuite;
@@ -33,6 +34,7 @@ import org.junit.runner.RunWith;
 @PinpointAgent(AgentPath.PATH)
 @Dependency({"io.grpc:grpc-stub:[1.23.0,1.41.max]", "io.grpc:grpc-netty:[1.21.0]", "io.grpc:grpc-protobuf:[1.21.0]",
         PluginITConstants.VERSION})
+@JvmArgument("-XX:MaxPermSize=768m")
 @ImportPlugin("com.navercorp.pinpoint:pinpoint-grpc-plugin")
 @PinpointConfig("pinpoint-grpc-plugin-test.config")
 public class Grpc_1_23_0_to_IT extends GrpcITBase {
